crates/preprocessor/tests/snapshots/main__define_expansion_comment_4-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 493
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      14,
      33,
      14,
      33
    ],
    [
      34,
      35,
      34,
      35
    ],
    [
      36,
      37,
      36,
      37
    ],
    [
      38,
      41,
      38,
      41
    ],
    [
      42,
      45,
      42,
      45
    ],
    [
      46,
      47,
      46,
      47
    ],
    [
      51,
      52,
      53,
      54
    ],
    [
      53,
      56,
      55,
      58
    ],
    [
      57,
      60,
      59,
      62
    ],
    [
      60,
      61,
      62,
      63
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 48,
        "end": 51
      },
      "expanded_range": {
        "start": 47,
        "end": 53
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
