crates/preprocessor/tests/snapshots/main__define_expansion_comment_5-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      14,
      33,
      14,
      33
    ],
    [
      34,
      35,
      34,
      35
    ],
    [
      36,
      37,
      36,
      37
    ],
    [
      38,
      53,
      38,
      53
    ],
    [
      54,
      57,
      54,
      57
    ],
    [
      58,
      61,
      58,
      61
    ],
    [
      62,
      63,
      62,
      63
    ],
    [
      67,
      68,
      69,
      70
    ],
    [
      68,
      69,
      70,
      71
    ],
    [
      69,
      72,
      71,
      74
    ],
    [
      73,
      76,
      75,
      78
    ],
    [
      76,
      77,
      78,
      79
    ],
    [
      77,
      78,
      79,
      80
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 64,
        "end": 67
      },
      "expanded_range": {
        "start": 63,
        "end": 69
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
