crates/preprocessor/tests/snapshots/main__define_expansion_comment_5.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 538
expression: "SourcepawnPreprocessor::new(FileId::from(0), input,\n                &mut extend_macros).preprocess_input().preprocessed_text().as_ref()"
---
#define FOO 1 /* long\
comment */ + 2 // Line comment
int foo = 1 + 2;
int bar;

