crates/preprocessor/tests/snapshots/main__define_expansion_line_continuation_1-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 514
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      30,
      12,
      30
    ],
    [
      31,
      35,
      31,
      35
    ],
    [
      36,
      39,
      36,
      39
    ],
    [
      39,
      40,
      39,
      40
    ],
    [
      40,
      42,
      40,
      42
    ],
    [
      42,
      43,
      42,
      43
    ],
    [
      44,
      45,
      44,
      45
    ],
    [
      49,
      50,
      62,
      63
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 46,
        "end": 49
      },
      "expanded_range": {
        "start": 45,
        "end": 62
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
