crates/preprocessor/tests/snapshots/main__define_expansion_line_continuation_1.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 552
expression: "SourcepawnPreprocessor::new(FileId::from(0), input,\n                &mut extend_macros).preprocess_input().preprocessed_text().as_ref()"
---
#define FOO "test \
expansion"
char foo[64] = "test expansion";

