crates/preprocessor/tests/snapshots/main__define_expansion_line_continuation_2-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 504
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      39,
      12,
      39
    ],
    [
      40,
      44,
      40,
      44
    ],
    [
      45,
      48,
      45,
      48
    ],
    [
      48,
      49,
      48,
      49
    ],
    [
      49,
      51,
      49,
      51
    ],
    [
      51,
      52,
      51,
      52
    ],
    [
      53,
      54,
      53,
      54
    ],
    [
      58,
      59,
      76,
      77
    ]
  ],
  "expanded_symbols": []
}
