crates/preprocessor/tests/snapshots/main__define_expansion_nested_1-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 514
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      15,
      12,
      15
    ],
    [
      16,
      17,
      16,
      17
    ],
    [
      20,
      21,
      20,
      21
    ],
    [
      22,
      29,
      22,
      29
    ],
    [
      30,
      33,
      30,
      33
    ],
    [
      34,
      35,
      34,
      35
    ],
    [
      36,
      39,
      36,
      39
    ],
    [
      40,
      43,
      40,
      43
    ],
    [
      44,
      45,
      44,
      45
    ],
    [
      49,
      50,
      53,
      54
    ]
  ],
  "expanded_symbols": []
}
