crates/preprocessor/tests/snapshots/main__define_expansion_nested_1.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 584
expression: "SourcepawnPreprocessor::new(FileId::from(0), input,\n                &mut extend_macros).preprocess_input().preprocessed_text().as_ref()"
---
#define FOO BAR +   2
#define BAR 1
int foo = 1 +   2;

