crates/preprocessor/tests/snapshots/main__define_expansion_nested_2-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 525
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      15,
      12,
      15
    ],
    [
      16,
      17,
      16,
      17
    ],
    [
      18,
      19,
      18,
      19
    ],
    [
      20,
      27,
      20,
      27
    ],
    [
      28,
      31,
      28,
      31
    ],
    [
      32,
      33,
      32,
      33
    ],
    [
      34,
      35,
      34,
      35
    ],
    [
      36,
      39,
      36,
      39
    ],
    [
      40,
      47,
      40,
      47
    ],
    [
      48,
      51,
      48,
      51
    ],
    [
      52,
      53,
      52,
      53
    ],
    [
      54,
      57,
      54,
      57
    ],
    [
      58,
      61,
      58,
      61
    ],
    [
      62,
      63,
      62,
      63
    ],
    [
      67,
      68,
      73,
      74
    ]
  ],
  "expanded_symbols": []
}
