crates/preprocessor/tests/snapshots/main__define_expansion_nested_3-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 557
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      15,
      12,
      15
    ],
    [
      16,
      17,
      16,
      17
    ],
    [
      18,
      19,
      18,
      19
    ],
    [
      20,
      27,
      20,
      27
    ],
    [
      28,
      31,
      28,
      31
    ],
    [
      32,
      33,
      32,
      33
    ],
    [
      34,
      35,
      34,
      35
    ],
    [
      36,
      37,
      36,
      37
    ],
    [
      38,
      41,
      38,
      41
    ],
    [
      42,
      45,
      42,
      45
    ],
    [
      46,
      47,
      46,
      47
    ],
    [
      51,
      52,
      57,
      58
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 48,
        "end": 51
      },
      "expanded_range": {
        "start": 47,
        "end": 57
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
